# eva-agent

./: .gitignore  DEVELOPMENT.md  README.md  eva  requirements.txt  run.py  start_linux.sh  start_windows.bat  start_windows.ps1  start_windows.vbs  启动.sh  安装启动.bat  落地清单.md
desktop-ui/: components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
desktop-ui/src/: App.tsx  index.css
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src/components/ui/: button.tsx  card.tsx  input.tsx
desktop-ui/src/lib/: api.ts
queen_bee/: __init__.py  acceptance.py  agent.py  api_server.py  avatars.py  code_review.py  config.py  crypto.py  delegate.py  devices.py  mastery.py  models.py  palace.py  project.py  provider.py  router.py  security.py  semantic.py  tool_registry.py  web_inspector.py
queen_bee/desktop/: dashboard.html  main.js  package.json  start.sh
queen_bee/locales/: en.json  zh.json
queen_bee/tools/: __init__.py  file_ops.py  terminal.py  web_search.py
tests/: test_core.py
