[package]
name = "eva-agent"
version = "0.11.4"
description = "Eva Agent — 桌面端 AI 智能助手"
authors = ["Qianye Lab"]
license = "MIT"
repository = "https://github.com/yadmms/eva-agent"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
